--- a/frontend/item.html
+++ b/frontend/item.html
@@ -8,63 +8,71 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
+  <style>
+    /* Responsive main content padding */
+    .item-content {
+      padding-top: 120px;
+      padding-bottom: 100px;
+    }
+
+    @media (max-width: 768px) {
+      .item-content {
+        padding-top: 100px !important;
+        padding-bottom: 80px !important;
+      }
+    }
+
+    @media (max-width: 576px) {
+      .item-content {
+        padding-top: 90px !important;
+        padding-bottom: 60px !important;
+      }
+    }
+  </style>
 </head>
 
 <body>
 <!-- Navbar (same as search.html for consistency) -->
-<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
-  <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="#" onclick="navigateTo('index.html')">
-      <div style="background: linear-gradient(to bottom right, var(--primary), var(--secondary));" class="rounded-xl p-2 me-2">
-        <svg class="text-white" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M3 7v10a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2z"/>
-          <path d="M8 5a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H8V5z"/>
-          <circle cx="9" cy="12" r="1"/>
-          <circle cx="12" cy="12" r="1"/>
-          <circle cx="15" cy="12" r="1"/>
-        </svg>
-      </div>
-      <div class="d-none d-sm-block">
-        <div class="fw-bold text-primary mb-0">VIT Pune Lost & Found</div>
-        <small class="text-muted">Vishwakarma Institute of Technology</small>
-      </div>
-    </a>
+<nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background: linear-gradient(to right, #1E3A8A, #14B8A6);">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center" href="#" onclick="navigateTo('index.html')">
+        <img src="assets/images/logo.png" alt="VIT Pune Logo" height="70" style="object-fit: contain;">
+        <div class="d-none d-sm-block">
+          <img src="assets/images/TIClogo.png" alt="TIC VIT Pune Logo" height="70" style="object-fit: contain;transform: translateX(5px);">
+        </div>
+      </a>
 
-    <button class="navbar-toggler d-lg-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <button class="navbar-toggler d-lg-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto d-lg-none">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="finder.html">Find Item</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="report.html">Report Lost</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="found.html">Report Found</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="search.html">Browse Items</a>
-        </li>
-      </ul>
-      <div class="d-none d-lg-flex ms-auto">
-        <button class="btn btn-link text-muted-foreground me-4" onclick="navigateTo('index.html')">Home</button>
-        <button class="btn btn-link text-muted-foreground me-4" onclick="navigateTo('finder.html')">Find Item</button>
-        <button class="btn btn-link text-muted-foreground me-4" onclick="navigateTo('report.html')">Report Lost</button>
-        <button class="btn btn-link text-muted-foreground me-4" onclick="navigateTo('found.html')">Report Found</button>
-        <button class="btn btn-accent" onclick="navigateTo('search.html')">Browse Items</button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto d-lg-none">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="report.html">Report Lost</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="found.html">Report Found</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="search.html">Browse Items</a>
+          </li>
+        </ul>
+        <div class="d-none d-lg-flex ms-auto">
+          <button class="btn btn-link text-white me-4" onclick="navigateTo('index.html')">Home</button>
+          <button class="btn btn-link text-white me-4" onclick="navigateTo('report.html')">Report Lost</button>
+          <button class="btn btn-link text-white me-4" onclick="navigateTo('found.html')">Report Found</button>
+          <button class="btn btn-accent fw-bold" style="text-decoration: underline;" onclick="navigateTo('search.html')">Browse Items</button>
+        </div>
       </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
 <!-- Main Content -->
-<div class="container" style="padding-top:120px; padding-bottom:100px;">
+<div class="container item-content">
   <button class="btn btn-outline-secondary mb-4" onclick="history.back()">
     ← Back to Results
   </button>
