--- a/frontend/report.html
+++ b/frontend/report.html
@@ -31,7 +31,6 @@
 
     /* Navigation */
     .navbar {
-      background: white !important;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
       padding: 0.75rem 0;
     }
@@ -78,6 +77,12 @@
       gap: 0.5rem;
     }
 
+    /* Responsive navbar images */
+    .navbar img {
+      height: 70px;
+      object-fit: contain;
+    }
+
     .nav-btn {
       background: none;
       border: none;
@@ -118,7 +123,7 @@
     .main-container {
       max-width: 1100px;
       margin: 0 auto;
-      padding: 5rem 1rem 3rem;
+      padding: 6rem 1rem 3rem;
     }
 
     /* Header Section */
@@ -566,6 +571,14 @@
     }
 
     @media (max-width: 768px) {
+      .navbar img {
+        height: 50px;
+      }
+
+      .main-container {
+        padding: 5.5rem 0.75rem 2rem;
+      }
+
       .page-title {
         font-size: 2rem;
       }
@@ -595,8 +608,16 @@
     }
 
     @media (max-width: 576px) {
+      .navbar img {
+        height: 45px;
+      }
+
       .brand-text {
         display: none;
+      }
+
+      .main-container {
+        padding: 5rem 0.5rem 2rem;
       }
 
       .page-title {
@@ -676,27 +697,16 @@
 
 <body>
   <!-- Top Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background: linear-gradient(to right, #1E3A8A, #14B8A6);">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="#" onclick="navigateTo('index.html')">
-        <div style="background: linear-gradient(to bottom right, var(--primary), var(--secondary));"
-          class="rounded-xl p-2 me-2">
-          <svg class="text-white" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-            <path d="M3 7v10a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2z" />
-            <path d="M8 5a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H8V5z" />
-            <circle cx="9" cy="12" r="1" />
-            <circle cx="12" cy="12" r="1" />
-            <circle cx="15" cy="12" r="1" />
-          </svg>
-        </div>
+        <img src="assets/images/logo.png" alt="VIT Pune Logo" height="70" style="object-fit: contain;">
         <div class="d-none d-sm-block">
-          <div class="fw-bold text-primary mb-0">VIT Pune Lost & Found</div>
-          <small class="text-muted">Vishwakarma Institute of Technology</small>
+          <img src="assets/images/TIClogo.png" alt="TIC VIT Pune Logo" height="70" style="object-fit: contain;transform: translateX(5px);">
         </div>
       </a>
 
-      <button class="navbar-toggler d-lg-none ms-auto" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarNav">
+      <button class="navbar-toggler d-lg-none ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -704,9 +714,6 @@
         <ul class="navbar-nav ms-auto d-lg-none">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="finder.html">Find Item</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="report.html">Report Lost</a>
@@ -719,17 +726,14 @@
           </li>
         </ul>
         <div class="d-none d-lg-flex ms-auto">
-          <button class="btn btn-link text-muted-foreground me-4" onclick="navigateTo('index.html')">Home</button>
-          <button class="btn btn-link text-muted-foreground me-4" onclick="navigateTo('finder.html')">Find Item</button>
-          <button class="btn btn-link fw-bold text-primary me-4" onclick="navigateTo('report.html')">Report
-            Lost</button>
-          <button class="btn btn-link text-muted-foreground me-4" onclick="navigateTo('found.html')">Report
-            Found</button>
+          <button class="btn btn-link text-white me-4" onclick="navigateTo('index.html')">Home</button>
+          <button class="btn btn-link text-white me-4 fw-bold" onclick="navigateTo('report.html')" style="text-decoration: underline;">Report Lost</button>
+          <button class="btn btn-link text-white me-4" onclick="navigateTo('found.html')">Report Found</button>
           <button class="btn btn-accent" onclick="navigateTo('search.html')">Browse Items</button>
         </div>
       </div>
 
-
+      
     </div>
   </nav>
 
@@ -804,15 +808,7 @@
                 <polyline points="17 8 12 3 7 8" />
                 <line x1="12" y1="3" x2="12" y2="15" />
               </svg>
-              Choose File
-            </button>
-            <button class="btn-outline-custom" onclick="openCamera()">
-              <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" viewBox="0 0 24 24">
-                <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
-                <circle cx="12" cy="13" r="4" />
-              </svg>
-              Take Photo
+              Upload Image
             </button>
           </div>
           <input type="file" id="photo-input" accept="image/*" style="display: none;"
@@ -911,16 +907,6 @@
           <path d="m21 21-4.35-4.35" />
         </svg>
         <span>Search</span>
-      </button>
-      <button class="bottom-nav-btn" onclick="navigateTo('finder.html')">
-        <svg fill="currentColor" viewBox="0 0 24 24">
-          <rect x="3" y="7" width="18" height="12" rx="2" />
-          <path d="M8 5a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H8V5z" />
-          <circle cx="9" cy="13" r="1" fill="white" />
-          <circle cx="12" cy="13" r="1" fill="white" />
-          <circle cx="15" cy="13" r="1" fill="white" />
-        </svg>
-        <span>Find</span>
       </button>
       <button class="bottom-nav-btn active" onclick="navigateTo('report.html')">
         <svg fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
