--- a/frontend/item.html
+++ b/frontend/item.html
@@ -208,12 +208,12 @@
                 <option value="">Select Department</option>
                 <option value="Computer Engineering">Computer Engineering</option>
                 <option value="Information Technology">Information Technology</option>
-                <option value="Electronics & Telecommunication">Electronics & Telecommunication</option>
-                <option value="Mechanical Engineering">Mechanical Engineering</option>
+                <option value="Artificial Intelligence Engineering">Artificial Intelligence Engineering</option>
+                <option value="Artificial Intelligence and Machine Learning Engineering">Artificial Intelligence and Machine Learning Engineering</option>
                 <option value="Civil Engineering">Civil Engineering</option>
-                <option value="Electronics Engineering">Electronics Engineering</option>
-                <option value="Instrumentation Engineering">Instrumentation Engineering</option>
-                <option value="Production Engineering">Production Engineering</option>
+                <option value="Electronics & Telecommunication Engineering">Electronics & Telecommunication Engineering</option>
+                <option value="Software Engineering">Software Engineering</option>
+                <option value="Data Science Engineering">Data Science Engineering</option>
                 <option value="Artificial Intelligence & Data Science">AI & Data Science</option>
               </select>
             </div>
@@ -227,6 +227,9 @@
                 <option value="B">B</option>
                 <option value="C">C</option>
                 <option value="D">D</option>
+                <option value="E">E</option>
+                <option value="F">F</option>
+                <option value="G">G</option>
               </select>
             </div>
           </div>
