--- a/frontend/finder.html
+++ b/frontend/finder.html
@@ -768,6 +768,7 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/api_client.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
 
