--- a/frontend/index.html
+++ b/frontend/index.html
@@ -136,7 +136,7 @@
               <path d="M12 8a2 2 0 1 1 0 4 2 2 0 0 1 0-4z"/>
             </svg>
           </div>
-          <div class="h4 fw-bold text-primary mb-1">5,000+</div>
+          <div class="h4 fw-bold text-primary mb-1" id="stat-users">--</div>
           <div class="text-muted">Active Users</div>
         </div>
         <div class="col-6 col-md-3 text-center">
@@ -145,7 +145,7 @@
               <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
             </svg>
           </div>
-          <div class="h4 fw-bold text-primary mb-1">12,500+</div>
+          <div class="h4 fw-bold text-primary mb-1" id="stat-items-found">--</div>
           <div class="text-muted">Items Found</div>
         </div>
         <div class="col-6 col-md-3 text-center">
@@ -154,7 +154,7 @@
               <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/>
             </svg>
           </div>
-          <div class="h4 fw-bold text-primary mb-1">95%</div>
+          <div class="h4 fw-bold text-primary mb-1" id="stat-success-rate">--</div>
           <div class="text-muted">Success Rate</div>
         </div>
         <div class="col-6 col-md-3 text-center">
@@ -163,7 +163,7 @@
               <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
             </svg>
           </div>
-          <div class="h4 fw-bold text-primary mb-1">24/7</div>
+          <div class="h4 fw-bold text-primary mb-1" id="stat-support">24/7</div>
           <div class="text-muted">Support</div>
         </div>
       </div>
@@ -343,5 +343,37 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/api_client.js"></script>
   <script src="assets/js/main.js"></script>
+  <script>
+    // Load stats from backend on page load
+    document.addEventListener('DOMContentLoaded', async function() {
+      try {
+        const result = await LostFoundAPI.getStats();
+        const stats = result.stats || result;
+        
+        // Update stats display
+        const usersEl = document.getElementById('stat-users');
+        const itemsFoundEl = document.getElementById('stat-items-found');
+        const successRateEl = document.getElementById('stat-success-rate');
+        
+        if (usersEl && stats.activeUsers !== undefined) {
+          usersEl.textContent = stats.activeUsers.toLocaleString() + '+';
+        }
+        if (itemsFoundEl) {
+          // Use itemsReunited or totalFoundItems
+          const count = stats.itemsReunited || stats.totalFoundItems || 0;
+          itemsFoundEl.textContent = count.toLocaleString() + '+';
+        }
+        if (successRateEl && stats.successRate !== undefined) {
+          successRateEl.textContent = stats.successRate + '%';
+        }
+      } catch (error) {
+        console.log('Could not load stats from API, using defaults');
+        // Set fallback values if API fails
+        document.getElementById('stat-users').textContent = '5,000+';
+        document.getElementById('stat-items-found').textContent = '12,500+';
+        document.getElementById('stat-success-rate').textContent = '95%';
+      }
+    });
+  </script>
 </body>
 </html>
