--- a/frontend/item.html
+++ b/frontend/item.html
@@ -293,6 +293,7 @@
 <!-- Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/api_client.js"></script>
+<script src="assets/js/main.js"></script>
 <script src="assets/js/item.js"></script>
 <script>
   function openVerificationModal() {
@@ -340,10 +341,11 @@
     const contactDetails = document.getElementById('contact-details');
     contactDetails.style.display = 'block';
     
-    // Mock contact details (in real app, this would come from the finder's data)
-    document.getElementById('finder-name').textContent = 'Contact Admin';
-    document.getElementById('finder-email').textContent = 'lostandfound@vit.edu';
-    document.getElementById('finder-phone').textContent = '+91 XXXXX XXXXX';
+    // Use contact info from API if available, otherwise show default
+    const contactInfo = window.itemContactInfo || {};
+    document.getElementById('finder-name').textContent = contactInfo.name || 'Contact Admin';
+    document.getElementById('finder-email').textContent = contactInfo.email || 'lostandfound@vit.edu';
+    document.getElementById('finder-phone').textContent = contactInfo.phone || '+91 XXXXX XXXXX';
 
     // Show success alert
     const successAlert = document.createElement('div');
